--- a/src/index.css
+++ b/src/index.css
@@ -8,23 +8,20 @@
     font-style: normal;
     font-weight: 500;
     font-display: swap;
-    src: url(/src/assets/fonts/static/HankenGrotesk-Medium.ttf)
-      format('truetype');
+    src: url(/assets/fonts/static/HankenGrotesk-Medium.ttf) format('truetype');
   }
   @font-face {
     font-family: 'Hanken Grotesk';
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url(/src/assets/fonts/static/HankenGrotesk-Medium.ttf)
-      format('truetype');
+    src: url(/assets/fonts/static/HankenGrotesk-Medium.ttf) format('truetype');
   }
   @font-face {
     font-family: 'Hanken Grotesk';
     font-style: normal;
     font-weight: 800;
     font-display: swap;
-    src: url(/src/assets/fonts/static/HankenGrotesk-Medium.ttf)
-      format('truetype');
+    src: url(/assets/fonts/static/HankenGrotesk-Medium.ttf) format('truetype');
   }
 }
